fixed search results color in dark mode

--- a/theming/theme-dark.scss
+++ b/theming/theme-dark.scss
@@ -149,3 +149,7 @@ p {
     --bs-tooltip-color: $black !important;
     --bs-tooltip-bg: $white !important;
 }
+
+.aa-DetachedOverlay li.aa-Item[aria-selected=true] .search-item * {
+    color: white !important;
+}
